[project]
name = "hana-script"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "hanamizuno", email = "" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black~=23.3.0", "ruff~=0.0.270", "pyright~=1.1.311", "pytest~=7.3.1", "pytest-cov~=4.1.0"]
[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"