[project]
name = "hana-script"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "hanamizuno", email = "" }
]
dependencies = ["openai~=0.27.7", "pyannote.audio~=2.1.1", "pydub~=0.25.1", "soundfile~=0.12.1"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [ "ruff~=0.0.270", "pyright~=1.1.311", "pytest~=7.3.1", "pytest-cov~=4.1.0"]
[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
lint = { cmd = "ruff check . && pyright" }
format = { cmd = "ruff --fix ." }

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
