[project]
name = "hana-script"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "hanamizuno", email = "" }
]
dependencies = ["openai~=0.27.7", "pydub~=0.25.1", "pyannote.audio @ git+https://github.com/pyannote/pyannote-audio", "python-dotenv~=1.0.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff~=0.0.270",
    "pyright~=1.1.311",
    "pytest~=7.3.1",
    "pytest-cov~=4.1.0",
    "black~=23.3.0",
    "pydub-stubs>=0.25.1.0",
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
lint = { chain = ["lint:ruff", "lint:pyright"] }
"lint:ruff" = "ruff check ."
"lint:pyright" = "pyright"
format = { chain = ["format:black", "format:ruff"] }
"format:black" = "black ."
"format:ruff" = "ruff --fix ."
hana-script = "python -m hana_script.main --audio-file"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
